# CodexAlpacaTest-Trade

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: repo-health.yml  sample-backtest.yml  tests.yml
alpaca_lab/: __init__.py  config.py  logging_utils.py
alpaca_lab/backtest/: __init__.py  engine.py  metrics.py  portfolio.py
alpaca_lab/brokers/: __init__.py  alpaca.py
alpaca_lab/data/: __init__.py  chunking.py  contracts.py  historical_builder.py  ingestion.py  manifests.py  models.py  quality.py  (+3 more)
config/: backtest.example.yaml  default.yaml  multi_ticker_paper_portfolio.yaml  options_ingestion.example.yaml  paper_trading.example.yaml  qqq_paper_portfolio.yaml  sample_equities_board.json  sample_options_board.json  stock_ingestion.example.yaml
docs/: DATA_MODEL.md  MACHINE_SETUP.md  MULTI_TICKER_PAPER_PORTFOLIO.md  OPERATIONS.md  QQQ_PAPER_PORTFOLIO.md  SAFETY.md
scripts/: _bootstrap.py  bootstrap_mac.sh  bootstrap_windows.ps1  build_historical_dataset.py  doctor.py  install_multi_ticker_paper_task.ps1  install_qqq_paper_task.ps1  run_multi_ticker_portfolio_paper_trader.py  run_multi_ticker_portfolio_session.ps1  run_paper_equities.py  run_paper_options.py  run_qqq_portfolio_paper_trader.py  run_qqq_portfolio_session.ps1  run_sample_backtest.py
tests/: test_backtest_engine.py  test_broker_multileg_orders.py  test_broker_safeguards.py  test_config.py  test_historical_builder.py  test_ingestion.py  test_multi_ticker_portfolio.py  test_options_selectors.py  test_paper_orchestrator.py  test_qqq_portfolio.py  test_reporting.py
(+29 files in other folders)
